--- a/.github/conda/meta.yaml
+++ b/.github/conda/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - multiprocess
     - importlib_metadata
     - fsspec
-    - huggingface-hub
+    - huggingface_hub
   run:
     - python
     - pip
@@ -40,7 +40,7 @@ requirements:
     - multiprocess
     - importlib_metadata
     - fsspec
-    - huggingface-hub
+    - huggingface_hub
 
 test:
   imports:
