--- a/.github/conda/meta.yaml
+++ b/.github/conda/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - importlib_metadata
     - fsspec
     - huggingface_hub
+    - packaging
   run:
     - python
     - pip
@@ -41,6 +42,7 @@ requirements:
     - importlib_metadata
     - fsspec
     - huggingface_hub
+    - packaging
 
 test:
   imports:
