Fix typo in huggingface hub (#2192)
* Fix typo in huggingface hub

* Add packaging

--- a/.github/conda/meta.yaml
+++ b/.github/conda/meta.yaml
@@ -25,7 +25,8 @@ requirements:
     - multiprocess
     - importlib_metadata
     - fsspec
-    - huggingface-hub
+    - huggingface_hub
+    - packaging
   run:
     - python
     - pip
@@ -40,7 +41,8 @@ requirements:
     - multiprocess
     - importlib_metadata
     - fsspec
-    - huggingface-hub
+    - huggingface_hub
+    - packaging
 
 test:
   imports:
