--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
-  - name: Discussions
-    url: https://github.com/huggingface/datasets/discussions
+  - name: Forum
+    url: https://discuss.huggingface.co/c/datasets/10
     about: Please ask and answer questions here, and engage with other community members
