Add Arrow type casting to struct for Image and Audio + Support nested casting (#3575)
* add storage cast

* implement dict cast for image

* factorize extension type creation for audio and image + implement type cast for thos custom types

* fix tests

* style

* [big] allow extension array in nested arrays

* docs

* style

* fix Features pickling

* fix some tests

* fix more tests

* fix more tests

* add base extensionarray for pyarrow<6

* add extensionarray for pyarrow<6

* add soundfile to tests requirements

* minor

* remove not implemented error for complex casting in pyarrow 3

* style

* style again

* add casting for fixed size lists

* add libsndfile1 in the linux CI

* style

* typo

* start adding new tests just to notice the concatenation issue...

* [big] remove extension types + move cast_storage to the Image and Audio classes

* minor

* fix test

* style

* add more tests to image

* add audio tests

* support casting from null array

* fix field names verifications when casting

* docs + tests

* use the new table_cast on pyarrow tables

* whoops forgot one line

* remove unused string handling in Image.decode_example

* update tests accordingly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
         resource_class: medium
         steps:
             - checkout
+            - run: sudo apt-get -y update && sudo apt-get install -y libsndfile1-dev
             - run: pip install --upgrade pip
             - run: python -m venv venv
             - run: source venv/bin/activate
@@ -26,6 +27,7 @@ jobs:
         resource_class: medium
         steps:
             - checkout
+            - run: sudo apt-get -y update && sudo apt-get install -y libsndfile1-dev
             - run: pip install --upgrade pip
             - run: python -m venv venv
             - run: source venv/bin/activate
