--- a/.github/workflows/update-hub-repositories.yaml
+++ b/.github/workflows/update-hub-repositories.yaml
@@ -31,4 +31,5 @@ jobs:
         run: |
           export HF_TOKEN=${{ secrets.HUB_TRUSTED_COMMITER_TOKEN }}
           export DATASETS_LIB_PATH=$GITHUB_WORKSPACE
+          export HF_USE_PROD=1
           python update_hub_repositories.py --auto
