--- a/.github/workflows/build_dev_documentation.yml
+++ b/.github/workflows/build_dev_documentation.yml
@@ -3,7 +3,7 @@ name: Build dev documentation
 on:
   push:
     branches:
-      - docs_new_ui-actions-no-self-hosted
+      - docs_new_ui
   pull_request:
 
 
