--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -98,6 +98,39 @@
             "univariate-time-series-forecasting"
         ]
     },
+    "object-detection": {
+        "description": "tasks related to detecting instances of objects from a particular class in an image",
+        "options": [
+            "face-detection",
+            "other"
+        ]
+    },
+    "text-to-image": {
+        "description": "tasks related to generating images from an existing dataset",
+        "options": [
+            "image-captioning",
+            "other"
+        ]
+    },
+    "image-segmentation": {
+        "description": "tasks related to detecting and delineating distinct objects of interest appearing in images",
+        "options": [
+            "instance-segmentation",
+            "semantic-segmentation",
+            "panoptic-segmentation",
+            "other"
+        ]
+    },
+    "image-classification": {
+        "description": "tasks related to identifying what images represent",
+        "options": [
+            "multi-label-image-classification",
+            "single-label-image-classification",
+            "other"
+        ]
+
+    },
+
     "other": {
         "description": "other task family not mentioned here",
         "options": [
