--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -105,12 +105,16 @@
             "other"
         ]
     },
-    "text-to-image": {
+    "image-to-text": {
         "description": "tasks related to generating images from an existing dataset",
         "options": [
             "image-captioning",
             "other"
         ]
+    },
+    "text-to-image": {
+        "description": "tasks related to generating images from an existing dataset",
+        "options": []
     },
     "image-segmentation": {
         "description": "tasks related to detecting and delineating distinct objects of interest appearing in images",
