Make branches change

--- a/.github/workflows/build_dev_documentation.yml
+++ b/.github/workflows/build_dev_documentation.yml
@@ -3,7 +3,7 @@ name: Build dev documentation
 on:
   push:
     branches:
-      - doc_new_ui_test_workflows
+      - docs_new_ui*
   pull_request:
 
 # concurrency:
