--- a/.github/workflows/build_dev_documentation.yml
+++ b/.github/workflows/build_dev_documentation.yml
@@ -1,12 +1,11 @@
 name: Build dev documentation
 
 on:
+  push:
+    branches:
+      - docs_new_ui
   pull_request:
-    types: [ opened ]
 
-# concurrency:
-#   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-#   cancel-in-progress: true
 
 jobs:
   build_and_package:
