Added computer vision tasks (#3800)
* added computer vision tasks

* added image-to-text

* fixed image-to-texttext-to-image and changed description

--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -98,6 +98,43 @@
             "univariate-time-series-forecasting"
         ]
     },
+    "object-detection": {
+        "description": "tasks related to detecting instances of objects from a particular class in an image",
+        "options": [
+            "face-detection",
+            "other"
+        ]
+    },
+    "image-to-text": {
+        "description": "tasks related to generating text from images",
+        "options": [
+            "image-captioning",
+            "other"
+        ]
+    },
+    "text-to-image": {
+        "description": "tasks related to generating images from text",
+        "options": []
+    },
+    "image-segmentation": {
+        "description": "tasks related to detecting and delineating distinct objects in images",
+        "options": [
+            "instance-segmentation",
+            "semantic-segmentation",
+            "panoptic-segmentation",
+            "other"
+        ]
+    },
+    "image-classification": {
+        "description": "tasks related to identifying what images represent",
+        "options": [
+            "multi-label-image-classification",
+            "single-label-image-classification",
+            "other"
+        ]
+
+    },
+
     "other": {
         "description": "other task family not mentioned here",
         "options": [
