add ontonotesv5_conll2012 dataset

--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -40,6 +40,9 @@
             "named-entity-recognition",
             "part-of-speech-tagging",
             "parsing",
+            "semantic-role-labeling",
+            "lemmatization",
+            "word-sense-disambiguation",
             "other"
         ]
     },
