[feat] Add TextVQA dataset
This would be the first classification-based vision-and-language dataset in the datasets library.

Currently, the dataset downloads everything you need beforehand. See the [paper](https://arxiv.org/abs/1904.08920) for more details.

Test Plan:
- Ran the full and the dummy data test locally

--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -77,7 +77,8 @@
         "subtasks": [
             "extractive-qa",
             "open-domain-qa",
-            "closed-domain-qa"
+            "closed-domain-qa",
+            "visual-question-answering",
         ]
     },
     "sentence-similarity": {
