--- a/src/datasets/utils/resources/tasks.json
+++ b/src/datasets/utils/resources/tasks.json
@@ -4,7 +4,7 @@
         "subtasks": [
             "keyword-spotting",
             "speaker-identification",
-            "speaker-intent-classification",
+            "intent-classification",
             "emotion-recognition",
             "language-identification"
         ]
